Reload Page when Reset Button Pushed

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
         <button type="button" id=genSquads>Generate Squads</button> <br>
 
-        <button type="button" id=reset>Reset Squads</button>
+        <button type="button" id=reset onClick="window.location.reload()">Reset Squads</button>
 
         <table class=playerList>
             <caption><h2>Waiting List</h2></caption>
