--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,128 @@
 <html lang="en">
 
     <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
+        body {
+            text-align: center;
+            background-color: silver;
+            margin: 0px;
+            padding: 0px;
+            padding-bottom: 50px;
+        }
+        input[type="number"]{
+            background-color: steelblue;
+            border: solid darkslategray 2px;
+            border-radius: 4px;
+        }
+        th {
+            background-color: darkslategrey;
+            color: white;
+            font-size: 20px;
+            text-shadow:    -1px -1px 0 black,
+                            1px -1px 0 black,
+                            -1px 1px 0 black,
+                            1px 1px 0 black,
+                            -2px 0 0 black,
+                            2px 0 0 black,
+                            0 2px 0 black,
+                            0 -2px 0 black;
+        }
+        tr:nth-child(even) {
+            background-color: slategray
+        }
+        table {
+            border-collapse: separate;
+            border: solid black 2px;
+            border-radius: 8px;
+            -moz-border-radius: 8px;
+            border-spacing: 0px;
+        }
+        td, th{
+            border-left: solid black 2px;
+            border-top: solid black 2px;
+            padding: 1px;
+        }
+        th{
+            border-top: none;
+        }
+        td:first-child, th:first-child{
+            border-left: none;
+        }
+        .h1{
+            margin-top: 0px;
+        }
+        .avgRow{
+            background-color: darkgoldenrod
+        }
+        .button{
+            font-family: Arial, Helvetica, sans-serif;
+            padding: 10px;
+            text-align: center;
+            margin: 4px 2px;
+            border: solid darkslategray 2px;
+            border-radius: 8px;
+            background-color: darkgoldenrod;
+            font-size: 15px;
+        }
+        .errorText{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 30px;
+            color: orangered;
+            text-shadow:    -1px -1px 0 black,
+                            1px -1px 0 black,
+                            -1px 1px 0 black,
+                            1px 1px 0 black,
+                            -2px 0 0 black,
+                            2px 0 0 black,
+                            0 2px 0 black,
+                            0 -2px 0 black;
+            padding: 20px;
         }
         .playerList{
+            font-family: Arial, Helvetica, sans-serif;
             width: 50%;
-            background-color: blanchedalmond
+            background-color: steelblue;
+            border-radius: 4px;
         }
+        .squadText{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 30px;
+            padding-top: 10px;
+            color: dodgerblue;
+            text-shadow:    -1px -1px 0 black,
+                            1px -1px 0 black,
+                            -1px 1px 0 black,
+                            1px 1px 0 black,
+                            -2px 0 0 black,
+                            2px 0 0 black,
+                            0 2px 0 black,
+                            0 -2px 0 black;
+            padding-bottom: 5px;
+        }
+        .text{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .titleText{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 50px;
+            padding-top: 20px;
+        }
+        .waitListText{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 40px;
+            padding-top: 10px;
+            color: red;
+            text-shadow:    -1px -1px 0 black,
+                            1px -1px 0 black,
+                            -1px 1px 0 black,
+                            1px 1px 0 black,
+                            -2px 0 0 black,
+                            2px 0 0 black,
+                            0 2px 0 black,
+                            0 -2px 0 black;
+            padding-bottom: 5px;
+        }
+
+
     </style>
  
     <head>
@@ -18,22 +132,25 @@
  
     <body>
         {% if errorPopup %}
-            <div>{{ errorPopup|safe }}</div>
+            <div class=errorText><b>{{ errorPopup|safe }}</b></div>
         {% endif %}
-        <h1>Hockey Squad Builder</h1>
-        <form action="/squads" method="POST">
-            Number of Squads:
-            <input type="number" id=numSquads name=numSquads value=1 min=1 /> <br>
-            <button type="submit" id=genSquads>Generate Squads</button> <br>
+        <div class=titleText><b>Hockey Squad Builder</b></div>
+        <div class=text>Generate a set of squads from a list of available players.</div><br>
+        <form class=text action="/squads" method="POST">
+            <b style="font-size:20px;">Number of Squads:</b>
+            <input type="number" id=numSquads name=numSquads value=1 min=1 />
+    
+            <button class=button type="submit" id=genSquads><b>Generate Squads</b></button>
         </form>
-        <form action = "/", method="GET">
-            <button type="submit">Reset Squads</button>
+        <form class=text action = "/", method="GET">
+            <button class=button type="submit"><b>Reset Squads</b></button>
         </form>
 
         <div>
             <h3>Waiting List</h3>
             {% if waitingList %}
-                <div>{{ waitingList|safe }</div>
+                <div class=waitListText><b>Waiting List</b></div>
+                <div class=text>{{ waitingList|safe }}</div>
             {% else %}
                 <div>No Waiting List Found</div>
             {% endif %}
@@ -41,7 +158,7 @@
         {% if squads %}
             <div>
                 {% for squad in squads %}
-                    <h3>Squad {{loop.index}}</h3>
+                    <div class=squadText><b>Squad {{loop.index}}</b></div>
                     {{ squad|safe }}
                 {% endfor %}
             </div>
